[package]
name = "ooc-rs"
version = "0.1.0"
authors = ["Kevin Peterson <frankdeath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
itertools = "~0.7.6"
strum = "0.20"
strum_macros = "0.20"
